# ModelStudy_FinanceRocks

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  justfile  pyproject.toml  requirements_dev.txt
docs/: index.md  installation.md  usage.md
src/ModelStudy_FR/: ModelStudy_FR.py  ModelStudy_FR.yml  ModelStudy_FR_v01.py  __init__.py  cli.py  finnish_ltd_market_profile.py  prepAndTrainWithParams.py  utils.py
tests/: __init__.py  test_ModelStudy_FR.py
