[project]
name = "ModelStudy_FR"
version = "0.1.0"
description = "Codes required to preprocess the input data and execute a modeling pipeline on the top of it."
readme = "README.md"
authors = [
  {name = "Sharat Sharma", email = "sharat.katz@gmail.com"}
]
maintainers = [
  {name = "Sharat Sharma", email = "sharat.katz@gmail.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/sharatkatz/ModelStudy_FR/issues"
changelog = "https://github.com/sharatkatz/ModelStudy_FR/blob/master/changelog.md"
homepage = "https://github.com/sharatkatz/ModelStudy_FR"

[project.scripts]
ModelStudy_FR = "ModelStudy_FR.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
